...
import com.cvshealth.accessibility.apps.composeaccessibilitytechniques.ui.theme.ComposeAccessibilityTechniquesTheme
import kotlinx.coroutines.delay

const val dropdownMenusHeadingTestTag = "dropdownMenusHeading"
const val dropdownMenusExample1HeadingTestTag = "dropdownMenusExample1Heading"
const val dropdownMenusExample1RowTestTag = "dropdownMenusExample1Row"
const val dropdownMenusExample1ButtonTestTag = "dropdownMenusExample1Button"
const val dropdownMenusExample1DropdownMenuTestTag = "dropdownMenusExample1DropdownMenu"
const val dropdownMenusExample1MenuItem1TestTag = "dropdownMenusExample1MenuItem1"
const val dropdownMenusExample1MenuItem2TestTag = "dropdownMenusExample1MenuItem2"
const val dropdownMenusExample2HeadingTestTag = "dropdownMenusExample2Heading"
const val dropdownMenusExample2RowTestTag = "dropdownMenusExample2Row"
const val dropdownMenusExample2ButtonTestTag = "dropdownMenusExample2Button"
const val dropdownMenusExample2DropdownMenuTestTag = "dropdownMenusExample2DropdownMenu"
const val dropdownMenusExample2MenuItem1TestTag = "dropdownMenusExample2MenuItem1"
const val dropdownMenusExample2MenuItem2TestTag = "dropdownMenusExample2MenuItem2"
const val dropdownMenusExample2CloseMenuItemTestTag = "dropdownMenusExample2CloseMenuItem"

/**
 * Demonstrate accessibility techniques for dropdown action menus.
 *
 * Applies [GenericScaffold] to wrap the screen content. Hosts Snackbars.
 *
...
